--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    <button id="changeColor"></button><button style="background-color: red;" id="clearData"></button>
     <script src="popup.js"></script>
   </body>
 </html>
